ADD search to chats; FIX 1 chat bag and swagger
